# Panasonic

./: ARCHITECTURE.md  CMakeLists.txt  DECODER_README.md  MODBUS_MISSING_FIELDS.md  MODBUS_README.md  MODBUS_SETUP.md  Modbus_task.md  REFACTORING.md  Registres.txt  partitions.csv  sdkconfig  sdkconfig.old
.cursor/plans/: modbus-rtu-slave-e13fdb71.plan.md
main/: CMakeLists.txt  adc.c  commands.c  decoder.c  ds18b20.c  hpc.c  http_server.c  idf_component.yml  modbus_params.c  modbus_slave.c  mqtt.c  mqtt_client.c  nvs_hp.c  protocol.c  wifi_connect.c
main/include/: adc.h  commands.h  config.h  decoder.h  ds18b20a.h  hpc.h  hpc_mqtt.h  http_server.h  modbus_params.h  modbus_slave.h  mqtt.h  mqtt_pub.h  nvs_hp.h  project_config.h  protocol.h  wifi_connect.h
